review fix: change list type